kubernetes/apps/traefik/dashboard-ingress-lanmine.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-lanmine
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: traefik.lanmine.local
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - traefik.lanmine.local
      secretName: traefik-lanmine-tls
  rules:
    - host: traefik.lanmine.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 8080
